samples/_failures_safe/1761295920_789462_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19914a82.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_19914a82.c:141:25: error: missing terminating " character
  141 |         fprintf(stderr, "Invalid operation parameters
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_19914a82.c:141:9: error: expected expression at end of input
  141 |         fprintf(stderr, "Invalid operation parameters
      |         ^~~~~~~
./samples/SAFE/__tmp_19914a82.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_19914a82.c:141:9: error: expected declaration or statement at end of input
